Small Route Start Fix
Small Fix Route Start

--- a/src/app/Components/router-start/router-start.component.scss
+++ b/src/app/Components/router-start/router-start.component.scss
@@ -143,10 +143,10 @@ h3 {
 }
 
 #selectedAP {
-  width: 40px;
-  height: 45px;
-  background: url('../../../assets/icon/ausgewählt.svg');
+  width: 33.35px;
+  height: 37.19px;
+  background: url('../../../assets/icon/Sammelpunkt.svg');
   background-repeat: no-repeat;
-  background-size: 45px;
+  background-size: 31px;
   background-position: center;
 }
