--- a/src/app/Components/router-start/router-start.component.html
+++ b/src/app/Components/router-start/router-start.component.html
@@ -23,13 +23,13 @@
         </button>
       </ion-col>
       <ion-col size="3">
-        <button ion-button id="cancel" (click)="closeView()" hidden>
+        <button ion-button name="cancel" id="cancel" (click)="closeView()" hidden>
           <ion-icon
             name="close-outline"
             style="font-size: 30px; color: white; --ionicon-stroke-width: 30px;"
           ></ion-icon>
         </button>
-        <button ion-button id="trash" (click)="deleteAPPoints()" hidden>
+        <button ion-button name="trash" id="trash" (click)="deleteAPPoints()" hidden>
           <ion-icon
             name="trash-outline"
             style="font-size: 30px; color: white; --ionicon-stroke-width: 20px;"
