Fixes Edit Route Creation
Route Creation Flow finished

--- a/src/app/Components/edit-favorite/edit-favorite.component.html
+++ b/src/app/Components/edit-favorite/edit-favorite.component.html
@@ -29,7 +29,7 @@
             height: 50px;
             border-top: thin solid white;
             margin-top: 5px;
-            padding-top: 10px; opacity: 0.87; background-color: transparent;" (click)=saveRoute()>
+            padding-top: 10px; opacity: 0.87; background-color: transparent;">
               <ion-icon name="home-outline" style=" width: 25px;
             height: 25px;
             color: white;"></ion-icon>
