--- a/src/app/Components/main-menu/main-menu.component.html
+++ b/src/app/Components/main-menu/main-menu.component.html
@@ -16,7 +16,7 @@
     <div class="wrap" >
         <button ion-button class="btn2"></button>
         <div *ngFor="let point of points; let i=index">
-        <div class="point" (click)="chooseAP()" >
+        <div class="point"  >
             <h3 > {{point.name}} </h3>
         </div>
        
