--- a/src/app/Components/search-bar/search-bar.component.html
+++ b/src/app/Components/search-bar/search-bar.component.html
@@ -76,11 +76,11 @@
             <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
           </svg>
         </ion-button>
-        <button class="s-btn primary" [id]="shortcut.iconName" style="margin-left: 10px; border-radius: 30px;" *ngIf="shortcut.orderNumber!=1"
+        <button class="s-btn primary" [id]="shortcut.iconName" style="margin-left: 10px;  background-color: #4f4f4f; border-radius: 30px;" *ngIf="shortcut.orderNumber!=1"
           (click)="onSelect(shortcut.coords,shortcut.address,'','', shortcut.iconName)">
           
         </button>
-        <button class="s-btn primary"  [id]="shortcut.iconName" style="margin-left: 10px; border-radius: 30px;" *ngIf="shortcut.orderNumber==1"
+        <button class="s-btn primary"  [id]="shortcut.iconName" style="margin-left: 10px;  background-color: #4f4f4f; border-radius: 30px;" *ngIf="shortcut.orderNumber==1"
           (click)="onSelect(shortcut.coords,shortcut.address,'','', shortcut.iconName)">
          
         </button>
