search icon fix

--- a/src/app/Components/search-bar/search-bar.component.html
+++ b/src/app/Components/search-bar/search-bar.component.html
@@ -19,9 +19,7 @@
       </button>
       <button class="ava" id="saveBtn" hidden (click)=saveRoute()>
       </button>
-      <button class="ava" id="{{iconNew}}" style=" width: 25px;
-      height: 25px;
-      color: white;" >
+      <button class="ava" id="{{iconNew}}" [hidden]="hideIcon" >
       </button>
       
       
