save button selection & delete shortcut

--- a/src/app/Components/button-overlay/button-overlay.component.scss
+++ b/src/app/Components/button-overlay/button-overlay.component.scss
@@ -58,7 +58,7 @@
   background-position: center;
   background-color: white;
 }
-#bookIcon:focus, #workIcon:focus, #starIcon:focus, #shoppingIcon:focus, #homeIcon:focus, #heartIcon:focus{
+#bookIcon:hover, #workIcon:hover, #starIcon:hover, #shoppingIcon:hover, #homeIcon:hover, #heartIcon:hover{
   background-color:fuchsia;
 }
 .saveFavorite {
