--- a/src/app/pages/map/map-start/map-start.page.html
+++ b/src/app/pages/map/map-start/map-start.page.html
@@ -1,6 +1,6 @@
 <ion-header style="z-index: 5; position: fixed;">
   <search-bar  [hidden]="searchbar"></search-bar>
-  <button ion-button id="closeWindow" (click)="closeView()" [hidden]="closeWindow" style=" margin-top:1.5em; margin-right:1.5em">
+  <button ion-button id="closeWindow" (click)="closeView()" [hidden]="closeWindow">
     <ion-icon name="close-outline"
     style="font-size: 33.25px; color: white; --ionicon-stroke-width: 25px;">
     </ion-icon>
