--- a/src/app/pages/map/map-start/map-start.page.html
+++ b/src/app/pages/map/map-start/map-start.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 <map-box></map-box>
 
-<ion-row id="ONLY FOR TESTING" style="position: absolute; bottom: 50px;">
+<!-- <ion-row id="ONLY FOR TESTING" style="position: absolute; bottom: 50px;">
   <ion-button
     color="tertiary"
     shape="round"
@@ -49,7 +49,7 @@
       <ion-icon icon="server"></ion-icon>
     </div>
   </ion-button>
-</ion-row>
+</ion-row> -->
 
 <riding-toggle id="toggleInidicator"
   style="
