--- a/src/app/Components/edit-favorite/edit-favorite.component.html
+++ b/src/app/Components/edit-favorite/edit-favorite.component.html
@@ -42,68 +42,66 @@
       >
         <ion-reorder-group (ionItemReorder)="doReorder($event)">
           <div class="listElement" *ngFor="let shortcut of favorList">
-           
-              <ion-item>
-                <div style="background: #383838; padding: 0; width: 100%;">
-                  <ion-row>
-                    <ion-col size="2">
-                      <button
-                        class="ava"
-                        id="{{ shortcut.iconName }}"
-                        style="
-                          width: 25px; height: 25px;
-                          margin-top: 50%;
-                          opacity: 0.87;
-                          background-color: transparent;
-                        "
-                        (click)="saveRoute()"
-                      >
-                      </button>
-                    </ion-col>
-                    <ion-col size="8">
-                      <h5
-                        style="
-                          text-align: left;
-                          margin-top: 5px;
-                          padding-top: 10px;
-                          margin-bottom: 0px;
-                          padding-bottom: 1px;
-                          color: white;
-                          font-weight: 500;
-                          font-size: 16px;
-                        "
-                      >
-                        {{ shortcut.street }}
-                      </h5>
-                      <h5
-                        style="
-                          margin-top: 5px;
-                          color: white;
-                          font-weight: 300;
-                          font-size: 15px;
-                        "
-                      >
-                        {{ shortcut.city }}
-                      </h5>
-                    </ion-col>
-                    <ion-col size="2" style="padding-top: 25px">
-                      <button
-                        class="ava"
-                        style="background-color: transparent;"
-                        (click)="deleteFavor(shortcut)"
-                        [hidden]="hideTrash"
-                      >
-                        <ion-icon
-                          name="trash-outline"
-                          style="width: 25px; height: 25px; color: white;"
-                        ></ion-icon>
-                      </button>
-                      <ion-reorder [hidden]="hideReorder"></ion-reorder>
-                    </ion-col>
-                  </ion-row>
-                </div>
-              </ion-item>
-             
+            <ion-item>
+              <div style="background: #383838; padding: 0; width: 100%;">
+                <ion-row>
+                  <ion-col size="2">
+                    <button
+                      class="ava"
+                      id="{{ shortcut.iconName }}"
+                      style="
+                        width: 25px;
+                        height: 25px;
+                        margin-top: 50%;
+                        opacity: 0.87;
+                        background-color: transparent;
+                      "
+                      (click)="saveRoute()"
+                    ></button>
+                  </ion-col>
+                  <ion-col size="8">
+                    <h5
+                      style="
+                        text-align: left;
+                        margin-top: 5px;
+                        padding-top: 10px;
+                        margin-bottom: 0px;
+                        padding-bottom: 1px;
+                        color: white;
+                        font-weight: 500;
+                        font-size: 16px;
+                      "
+                    >
+                      {{ shortcut.street }}
+                    </h5>
+                    <h5
+                      style="
+                        margin-top: 5px;
+                        color: white;
+                        font-weight: 300;
+                        font-size: 15px;
+                      "
+                    >
+                      {{ shortcut.city }}
+                    </h5>
+                  </ion-col>
+                  <ion-col size="2" style="padding-top: 25px;">
+                    <button
+                      class="ava"
+                      style="background-color: transparent;"
+                      (click)="deleteFavor(shortcut)"
+                      [hidden]="hideTrash"
+                    >
+                      <ion-icon
+                        name="trash-outline"
+                        style="width: 25px; height: 25px; color: white;"
+                      ></ion-icon>
+                    </button>
+                    <ion-reorder [hidden]="hideReorder"></ion-reorder>
+                  </ion-col>
+                </ion-row>
+              </div>
+            </ion-item>
           </div>
         </ion-reorder-group>
       </div>
