add comment and clean up

--- a/src/app/pages/settings/settings-main-dropbox/settings-main-dropbox.page.html
+++ b/src/app/pages/settings/settings-main-dropbox/settings-main-dropbox.page.html
@@ -128,6 +128,7 @@
       <div class="linie mt10"></div>
     </ion-row>
   </ion-grid>
+  <!-- TODO insert links -->
   <ion-grid>
     <ion-row>
       <ion-col size="6">
